@@ -1,5 +1,8 @@
 2004-04-20  Dominique Devriese  <devriese@kde.org>
 
+	* Rename "Cubic" to "Cubic Curve", as discussed with Maurizio
+	Paolini and Jaap Woldringh.
+
 	* Save and load line and point styles in the native format.  Most
 	of the code comes from Pino.
 
